--- a/package.json
+++ b/package.json
@@ -3,32 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.4.9",
-    "file-saver": "^2.0.5",
-    "jszip": "^3.10.1",
-    "next": "15.3.0",
+    "next": "^13.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "opencv.js": "^1.2.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.1.91",
-    "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8"
+    "pdfjs-dist": "^3.9.179",
+    "react-dropzone": "^14.2.3",
+    "chart.js": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
+    "jszip": "^3.10.1",
+    "file-saver": "^2.0.5",
+    "opencv-react": "^0.0.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
